# managing-the-task-list

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/models/: base.py  users.py
core/schemas/: tasks.py  users.py
migrations/: env.py
migrations/versions/: dca6dcd357e8_create_table_user_task.py
my-postgres-project/: docker-compose.yml
settings/: database.py  env_config.py
