[tool.poetry]
name = "managing"
version = "0.1.0"
description = ""
authors = ["vellimir <kkazancov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
